# Food-Menu

./: CMakeLists.txt  Main.qml  icon.rc  main.cpp  qfoodmeun.cpp  qfoodmeun.h  qrc.qrc
android/: AndroidManifest.xml
